Update info text.

--- a/public/index.html
+++ b/public/index.html
@@ -74,15 +74,30 @@
     </section>
     <section class="gallery-section bg-light" id="gallery">
         <div class="container px-4 px-lg-5">
+            <!-- Featured Project Row-->
+            <!-- <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+        <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/gallery-3-tebori-machine.jpg" alt="..." /></div>
+        <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+                <h4>Shoreline</h4>
+                <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            </div>
+        </div>
+    </div>
+        -->
             <!-- Gallery One Row-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/gallery-1.png" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="assets/img/gallery-1-tebori.jpg" alt="..." /></div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 gallery">
                         <div class="d-flex h-100">
                             <div class="gallery-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Art Work</h4>
-                                <p class="mb-0 text-white-50">アートワークです。</p>
+                                <h4 class="text-white">手彫り　TEBORI</h4>
+                                <p class="mb-0 text-white-50">
+                                    日本の太古から「彫りもの」として用いられる技法『手彫り』。
+                                    機械彫りとは違い、肌に入る質感は和紙に絵を描いたようなふわっとしたマッドな質感が特徴です。
+                                    墨ならではの馴染み方や色の発色の良さを生かした作品を作り上げる事を心掛けています。
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -90,13 +105,17 @@
             </div>
             <!-- Gallery Two Row-->
             <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/gallery-2.png" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="assets/img/gallery-2-machine.jpg" alt="..." /></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 gallery">
                         <div class="d-flex h-100">
                             <div class="gallery-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">和彫り</h4>
-                                <p class="mb-0 text-white-50">伝統和彫り、現代和彫りの作品集になります。伝統和彫りでは、古き良きを大切に黒、朱、緑、茶色を基本ベースに仕上げています。</p>
+                                <h4 class="text-white">機械彫り　MACHINE</h4>
+                                <p class="mb-0 text-white-50">
+                                    現代では主流になっている機械彫り。
+                                    細かい部分の色入れや全体の筋彫り等、あらゆる表現をする事が可能です。
+                                    手彫りに比べるとツヤっとした質感が特徴です。機械にしか出せない表現、質感を追求しています
+                                </p>
                             </div>
                         </div>
                     </div>
