--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,9 @@
     <header class="masthead">
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
-                <!--<div class="col-xl-5">
-                    <img class="img-fluid" src="assets/img/fg-masthead.jpg" alt="..." />
-                </div>-->
+                <div class="text-center">
+                    <h1 class="mx-auto my-0 text-uppercase">彫岳 HORITAKE</h1>
+                </div>
             </div>
         </div>
     </header>
@@ -76,15 +76,15 @@
         <div class="container px-4 px-lg-5">
             <!-- Featured Project Row-->
             <!-- <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-        <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/gallery-3-tebori-machine.jpg" alt="..." /></div>
-        <div class="col-xl-4 col-lg-5">
-            <div class="featured-text text-center text-lg-left">
-                <h4>Shoreline</h4>
-                <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/gallery-3-tebori-machine.jpg" alt="..." /></div>
+                <div class="col-xl-4 col-lg-5">
+                    <div class="featured-text text-center text-lg-left">
+                        <h4>Shoreline</h4>
+                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-        -->
+                -->
             <!-- Gallery One Row-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 <div class="col-lg-6"><img class="img-fluid" src="assets/img/gallery-1-tebori.jpg" alt="..." /></div>
