--- a/public/index.html
+++ b/public/index.html
@@ -112,12 +112,16 @@
             </div>
             <!-- Featured Project Row-->
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center featured-section">
-                <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/gallery-3-tebori-machine.jpg" alt="..." /></div>
+                <div class="col-xl-8 col-lg-7">
+                    <img class="img-fluid mb-3 mb-lg-0" src="assets/img/gallery-3-tebori-machine.jpg" alt="..." />
+                </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
                         <h4>TEBORI x MACHINE</h4>
-                        <p class="text-black-50 mb-0">僕のスタイルはマッドな質感の手彫り、細かい表現が可能な機械、二つの技法を用いて仕上げていきます。
-                        それまであった古き良き和彫りの表現、今の時代だからこそ出来る新しい表現を織り交ぜて、唯一無二、独自の『彫もの」を追求しています。</p>
+                        <p class="text-black-50 mb-0">
+                            僕のスタイルはマッドな質感の手彫り、細かい表現が可能な機械、二つの技法を用いて仕上げていきます。
+                            それまであった古き良き和彫りの表現、今の時代だからこそ出来る新しい表現を織り交ぜて、唯一無二、独自の『彫もの」を追求しています。
+                        </p>
                     </div>
                 </div>
             </div>
