--- a/public/index.html
+++ b/public/index.html
@@ -168,9 +168,9 @@
                 </div>
             </div>
             <div class="social d-flex justify-content-center">
+                <a class="mx-2" href="https://www.instagram.com/horitake_tokyo_irezumi12"><i class="fab fa-instagram"></i></a>
                 <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                 <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
