Update contact icons.

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                            <i class="fas fa-map-location text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4 mx-auto" />
                             <div class="small text-black-50">〒125-0033 東京都葛飾区東水元1-4-1</div>
@@ -156,16 +156,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3 mb-md-0">
+                <!--<div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                            <i class="fas fa-mobile-screen-button text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">LINE</h4>
                             <hr class="my-4 mx-auto" />
                             <div class="small text-black-50">+1 (555) 902-8832</div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="social d-flex justify-content-center">
                 <a class="mx-2" href="https://www.instagram.com/horitake_tokyo_irezumi12"><i class="fab fa-instagram"></i></a>
